bolletjestrui/bolletjestrui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bolletjestrui
  name: bolletjestrui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bolletjestrui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bolletjestrui
    spec:
      containers:
        - image: ghcr.io/rubenhensen/bolletjestrui:main-1a46d10
          name: bolletjestrui
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - mountPath: /app/data
              name: data
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bolletjestrui-data
