bolletjestrui/bolletjestrui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bolletjestrui
  name: bolletjestrui
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: bolletjestrui
